<resources>
    <string name="app_name">CuentasFer</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usuarios">Usuarios</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main22">MainActivity22</string>
    <string name="text_consultar">Consultar</string>
    <string name="text_enviar">Enviar Mail</string>
    <string name="text_enviar_whatsapp">Enviar WhatsApp</string>
    <string name="text_historico">Historico</string>
    <string name="title_activity_cosulta">Consulta Pagos</string>
    <string name="title_activity_historial">Historial Pagos</string>
    <string name="title_modif">Modificar</string>
    <string name="title_borrar">Borrar</string>
    <string name="title_filtrar">Filtrar</string>
    <string name="title_nuevo">Nuevo</string>

</resources>
