<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_modif"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_modif"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_vertical|center"
        android:layout_weight="1"/>

    <item
        android:id="@+id/navigation_borrar"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_borrar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_vertical|center"
        android:layout_weight="1"/>

    <item
        android:id="@+id/navigation_nuevo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_nuevo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_vertical|center"
        android:layout_weight="1"/>

</menu>
